Fix bug where scaled image overflows the container, by adding result text on same line as winner text

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ header p, .results-container p, .play-again{
     height:20vw;
     flex:2;
     flex-wrap: wrap;
+    min-height: fit-content + 50px;
 }
 
 .buttons-container button{
@@ -56,7 +57,11 @@ header p, .results-container p, .play-again{
     transition: scale 0.5s;
     box-shadow: 0 0 10px;
     min-width:100px;
+}
 
+.winner-result-container{
+    display:flex;
+    gap:20px;
 }
 
 .buttons-container button:hover{
